k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fundamentus-service
spec:
  type: ClusterIP
  selector:
    app: fundamentus
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
