k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: fundamentus
  name: fundamentus-route
spec:
  host: "PATCH_ME"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fundamentus-service
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
